# web-eval-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  clear.sh  install.sh  mcp_server.py  pyproject.toml  requirements.txt  smithery.yaml  test_precommit.py
.cursor/rules/: logging-standards.mdc
.github/workflows/: ruff.yml
src/: browser_manager.py  browser_utils.py  tool_handlers.py
webEvalAgent/: __init__.py  mcp_server.py
webEvalAgent/src/: agent_overlay.js  api_utils.py  browser_manager.py  browser_utils.py  cursorrules_utils.py  cusorrules_utils.py  env_utils.py  log_server.py  prompts.py  tool_handlers.py  utils.py
webEvalAgent/src/templates/static/: index.html
webEvalAgent/templates/: index.html
webEvalAgent/templates/static/: index.html
webagentqa/: mcp_server.py
