[project]
name = "web-ui-expert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.1.40",
    "google-genai>=1.7.0",
    "google-generativeai>=0.8.4",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.3",
    "langchain-google-genai>=2.0.10",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
web-ui-expert = "mcp_server:main"
